--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-node_modules
-node_modules
-yarn.lock
-public
-.env
-package-lock.json
-pnpm-lock.yaml
-build/
+# node_modules
+# node_modules
+# yarn.lock
+# public
+# .env
+# package-lock.json
+# pnpm-lock.yaml
+# build/
