--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only  ./src/server.ts"
+    "start": " nodemon ./src/server.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.7.4",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "apollo-server-core": "^3.12.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
@@ -19,6 +22,7 @@
     "express-fileupload": "^1.4.0",
     "graphql": "^16.6.0",
     "graphql-upload": "15.0.2",
+    "http-status-codes": "^2.2.0",
     "mysql2": "^3.4.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
